# daml

./: .bazelrc  WORKSPACE  deps.bzl
bazel_tools/: haskell-keep-hs-extra-libs.patch
daml-foundations/daml-ghc/: BUILD.bazel
daml-foundations/daml-ghc/daml-prim-src/GHC/: Num.daml  Show.daml
daml-foundations/daml-ghc/daml-stdlib-src/DA/Internal/: Prelude.daml
daml-foundations/daml-ghc/src/DA/Daml/GHC/Compiler/: Convert.hs
daml-foundations/daml-ghc/src/DA/Test/: GHC.hs
daml-foundations/daml-ghc/src/Development/IDE/State/Service/: Daml.hs
daml-lf/data/src/main/scala/com/digitalasset/daml/lf/data/: Ref.scala
daml-lf/engine/src/main/scala/com/digitalasset/daml/lf/engine/: Blinding.scala  Engine.scala
daml-lf/engine/src/test/scala/com/digitalasset/daml/lf/engine/: EngineTest.scala
daml-lf/interpreter/src/main/scala/com/digitalasset/daml/lf/speedy/: Pretty.scala
daml-lf/interpreter/src/main/scala/com/digitalasset/daml/lf/types/: Ledger.scala  LedgerForScenarios.scala
docs/source/daml/reference/: contract-keys.rst
docs/source/support/: release-notes.rst
language-support/java/codegen/src/ledger-tests/scala/com/digitalasset/: CodegenLedgerTest.scala
language-support/scala/bindings/: BUILD.bazel  variables.bzl
language-support/scala/bindings-akka/: BUILD.bazel  variables.bzl
language-support/scala/codegen-sample-app/: BUILD.bazel
language-support/scala/codegen-sample-app/src/test/scala/com/digitalasset/codegen/: ScalaCodeGenIT.scala
language-support/scala/examples/: BUILD.bazel
ledger/ledger-api-domain/src/main/scala/com/digitalasset/ledger/api/: domain.scala
ledger/ledger-api-integration-tests/: BUILD.bazel
ledger/ledger-api-integration-tests/src/test/lib/scala/com/digitalasset/platform/: PlatformApplications.scala
ledger/participant-state/kvutils/: BUILD.bazel
ledger/sandbox/src/main/scala/com/digitalasset/platform/sandbox/: LedgerIdGenerator.scala
ledger/sandbox/src/test/resources/damls/: Test.daml
web-ide/proxy/static/js/: main.js
(+48 files in other folders)
